--- a/source/music-client/src/assets/css/yin-current-play.scss
+++ b/source/music-client/src/assets/css/yin-current-play.scss
@@ -25,7 +25,7 @@
   padding-bottom: $footer-height;
   z-index: 99;
   background-color: $color-white;
-  @include box-shadow(1px 1px 10px rgba(0, 0, 0, 0.4));
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
   overflow: hidden;
 }
 
@@ -46,7 +46,6 @@
 }
 
 .menus {
-  background-color: $color-white;
   width: 100%;
   height: calc(100% - 19px);
   cursor: pointer;
@@ -59,14 +58,12 @@
     height: 40px;
     line-height: 40px;
     &:hover {
-      background-color: $color-blue-active;
-      color: $color-white;
+      background-color: $color-light-grey;
     }
   }
 }
 
 .is-play {
-  background-color: $color-blue;
-  color: $color-white;
+  color: $color-black;
   font-weight: bold;
 }
